third_party/move/move-compiler-v2/tests/checking/typing/bad_type_argument_arity_struct.exp

Diagnostics:
error: type argument count mismatch (expected 1 but got 0)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:13:13
   │
13 │         s1: S,
   │             ^

error: type argument count mismatch (expected 1 but got 0)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:14:13
   │
14 │         s2: S<>,
   │             ^

error: type argument count mismatch (expected 1 but got 2)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:15:13
   │
15 │         s3: S<u64, bool>,
   │             ^

error: type argument count mismatch (expected 1 but got 2)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:16:15
   │
16 │         s4: S<S<u64, bool>>
   │               ^

error: type argument count mismatch (expected 1 but got 0)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:17:9
   │
17 │     ): (S, S<>, S<u64, address>, S<S<u64, u8>>) {
   │         ^

error: type argument count mismatch (expected 1 but got 0)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:17:12
   │
17 │     ): (S, S<>, S<u64, address>, S<S<u64, u8>>) {
   │            ^

error: type argument count mismatch (expected 1 but got 2)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:17:17
   │
17 │     ): (S, S<>, S<u64, address>, S<S<u64, u8>>) {
   │                 ^

error: type argument count mismatch (expected 1 but got 2)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:17:36
   │
17 │     ): (S, S<>, S<u64, address>, S<S<u64, u8>>) {
   │                                    ^

error: type argument count mismatch (expected 1 but got 0)
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:27:21
   │
27 │     fun s<T>(f: T): S {
   │                     ^

error: type argument count mismatch (expected 1 but got 0)
  ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:7:13
  │
7 │         s1: S,
  │             ^

error: type argument count mismatch (expected 1 but got 0)
  ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:8:13
  │
8 │         s2: S<>,
  │             ^

error: type argument count mismatch (expected 1 but got 2)
  ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:9:13
  │
9 │         s3: S<bool, u64>,
  │             ^

error: unable to infer type: `?3`
   ┌─ tests/checking/typing/bad_type_argument_arity_struct.move:32:19
   │
32 │         let s = s(0);
   │                   ^
